--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 
 beautifulsoup4==4.6.0
 docutils==0.14
-Flask==0.10.1
-Jinja2==2.10
+flask>=1.0.0
 jmespath==0.9.3
 lxml==4.5.0
 multitasking==0.0.9
@@ -17,5 +16,5 @@ semantic-version==2.5.0
 urllib3==1.25.8
 wcwidth==0.1.7
 websocket-client==0.48.0
-Werkzeug==0.14.1
+
 
